cmake_minimum_required (VERSION 3.7)
project(framebotTest)

FIND_PACKAGE( OpenMP)
if(OpenMP_FOUND)
	message("OPENMP FOUND")
	set(CMAKE_BUILD_TYPE Debug)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

include_directories (${PROJECT_SOURCE_DIR}/../include)

add_definitions("-g")

set(OS_LINUX CMAKE_SYSTEM_NAME STREQUAL Linux)
set(OS_FREEBSD CMAKE_SYSTEM_NAME STREQUAL FreeBSD)

if(${OS_FREEBSD})
	# Add /usr/local/lib so we can find the libs on FreeBSD
	link_directories(/usr/local/lib /usr/lib /lib)
endif()

add_executable(methods_chat test_chat.c)
add_executable(update test_update.c)
add_executable(file test_file.c)
add_executable(userprofilephotos test_userprofilephotos.c)
add_executable(sendphotos test_sendphotos.c)
add_executable(sendaudio test_sendaudio.c)
add_executable(senddocument test_senddocument.c)
add_executable(sendvideo test_sendvideo.c)
add_executable(sendvoice test_sendvoice.c)
add_executable(sendvideonote test_sendvideonote.c)
add_executable(sendmessage test_sendmessage.c)

if(${OS_FREEBSD})
	# The default FreeBSD include path
	target_compile_options(methods_chat PUBLIC -I/usr/local/include)
	target_compile_options(update PUBLIC -I/usr/local/include)
	target_compile_options(file PUBLIC -I/usr/local/include)
	target_compile_options(userprofilephotos PUBLIC -I/usr/local/include)
	target_compile_options(sendphotos PUBLIC -I/usr/local/include)
	target_compile_options(sendaudio PUBLIC -I/usr/local/include)
	target_compile_options(senddocument PUBLIC -I/usr/local/include)
	target_compile_options(sendvideo PUBLIC -I/usr/local/include)
	target_compile_options(sendvoice PUBLIC -I/usr/local/include)
	target_compile_options(sendvideonote PUBLIC -I/usr/local/include)
	target_compile_options(sendmessage PUBLIC -I/usr/local/include)
endif()

if (${OS_LINUX} OR ${OS_FREEBSD})
	target_link_libraries(methods_chat jansson libcurl.so framebot)
	target_link_libraries(update jansson libcurl.so framebot)
	target_link_libraries(file jansson libcurl.so framebot)
	target_link_libraries(userprofilephotos jansson libcurl.so framebot)
	target_link_libraries(sendphotos jansson libcurl.so framebot)
	target_link_libraries(sendaudio jansson libcurl.so framebot)
	target_link_libraries(senddocument jansson libcurl.so framebot)
	target_link_libraries(sendvideo jansson libcurl.so framebot)
	target_link_libraries(sendvoice jansson libcurl.so framebot)
	target_link_libraries(sendvideonote jansson libcurl.so framebot)
	target_link_libraries(sendmessage jansson libcurl.so framebot)
endif ()

if (WIN32)
	target_link_libraries(methods_chat jansson libcurl_a framebot)
	target_link_libraries(update jansson libcurl_a framebot)
	target_link_libraries(file jansson libcurl_a framebot)
	target_link_libraries(userprofilephotos jansson libcurl_a framebot)
	target_link_libraries(sendphotos jansson libcurl_a framebot)
	target_link_libraries(sendphotos jansson libcurl_a framebot)
	target_link_libraries(sendaudio jansson libcurl_a framebot)
	target_link_libraries(senddocument jansson libcurl_a framebot)
	target_link_libraries(sendvideo jansson libcurl_a framebot)
	target_link_libraries(sendvideonote jansson libcurl_a framebot)
	target_link_libraries(sendmessage jansson libcurl_a framebot)
endif (WIN32)
